--- a/Index.css
+++ b/Index.css
@@ -1,56 +1,367 @@
-//Style sheet
-
+css
 body {
-            margin: 0;
-            font-family: italic, sans-serif;
-        }
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
-        .header {
-            background-color: #bcf5bc; /* Light Green Background Color */
-            text-align: center;
-            padding: 37px 3px;
-        }
+header {
+    
+    display: inline-flex;
+    justify-content: space-between;
+}
 
-        .header h1 {
-            font-size: 32px;
-            margin: 10px 0;
-            font-style: italic;
-              line-height: 0.7;
+.logo img {
+    float: left;
+    width: 120px;
+    height: 120px;
+}
 
-        }
+.header h1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    line-height: 1.1;
+   
+    margin: 0;
+    padding-left: 0%;
+}
 
-        .header h2 {
-            font-size: 11px;
-            margin: 15px 0;
-                        font-style: italic;
+.nav {
+   display: inline-flex;
+   position: absolute;
+   top: 10%;
+   right: 60px;
+   margin: 0;
+  }
 
-        }
+  .nav a{
+    font-weight: 900;
+
+    font-size:24px ;
+    font-family: 'Times New Roman', Times, serif;
+    color:#05696B;
+    padding: 12px 13px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .nav a:hover {
+    color: #033637;
+    text-decoration: underline;
+     
+  }
+  
+  
+  .phone {
+    font-size: xx-large;
+    position: absolute;
+    top: 35px;
+    right: 60px;}
+
+.phone a {
+    font-family: 'Times New Roman', Times, serif;
+    text-decoration: none;
+    display: block;
+    color: #05696B
+    ;
+
+}
+
+
+.container {
+    display: flex;
+   align-items: center;
+   background-color: #76D7C4;
+
+}
+
+
+
+ .container img {
+    max-width: 110%; /* Ensure the image doesn't exceed its container */
+    margin-right:0;
+    
+    height: auto;
+   
+}
+
+.container p {
+    flex: 1;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+    max-width: 30%;
+    margin-left: 20%;
+}
+
+.About , .services{
+    
+    justify-content: center;
+    align-items: center;
+   padding: 6%;
+   margin: 0;
+
+}
+
+.About p1{
+    margin: auto;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(108, 43, 108);
+    font-size: medium;
+    padding-left: 45%;
+    font-size: 20px;
+}
+.About hr {
+    width: 50%; /* Set the width of the horizontal line */
+    border: 1px solid  #76D7C4; /* Set the color of the horizontal line */
+    margin: 20px auto; /* Center the horizontal line */
+}
+.About p {
+    text-align: center;
+    color: rgb(108, 43, 108);
+    font-family: 'Times New Roman', Times, serif;
+    margin: 20px auto;
+    font-size: 20px;
+    max-width: 50%;
+    padding-bottom: 0;
+    
+}
+
+.Video {
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+    width: 100%; /* Set the width of your container to 50% of the viewport width */
+}
+video {
+   
+    width: 100%; /* Adjust the percentage as needed */
+    height: 500px;
+    object-fit: cover;
+  
+}
+
+.services p {
         
-        .header hr {
-            width: 70%; /* Set the width of the horizontal line */
-            border: 1.5px solid #000000; /* Set the color of the horizontal line */
-            margin: 20px auto; /* Center the horizontal line */
-        }
+        margin: auto;
+        text-align: center;
+        font-family: 'Times New Roman', Times, serif;
+        color: rgb(108, 43, 108);
+        font-size: medium;
+        font-weight: bold;
+        font-size: 20px;
         
-        .header-links {
-            display: flex;
-            justify-content: center;
-            margin-top: 5px;
-        }
+    
+}
 
-        .header-links a {
-            font-size: 10px; /* Set smaller font size */
-            padding: 1px 10px;
-            text-decoration: none;
-            color: #333; /* Dark Gray Text Color */
-            margin: 0 5px;
-        }
+.services hr {
+    width: 70%; /* Set the width of the horizontal line */
+    border: 1px solid  rgb(108, 43, 108); /* Set the color of the horizontal line */
+    margin: 20px auto; /* Center the horizontal line */
+}
 
-        .header-links a:hover {
-            color: #a9a9a9; /* Light Gray Background Color on Hover */
-        }
+.Boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 4%;
+}
+
+
+ .box {
+    width: 350px;
+    height: 200px;
+    border: 2px solid #76D7C4; /* Set the border width and color */
+    color: black;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+ .box p1 {
+    padding-top: 20px;
+    text-align: center;
+    position:absolute;
+    color: black;
+    font-weight: bold;
+    
+}
+.box hr {
+ 
+   display: block;
+    width: auto;
+   color:  rgb(108, 43, 108); /* Set the color of the horizontal line */
+}
+
+ .box a {
+    padding-top: 59px;
+    max-width: 90%;
+    color: black;
+    text-align: center;
+
+}
+
+.services .box:hover {
+     background-color: #76D7C4;
+}
+
+
+.Happy {
+    align-items: center;
+    background-color: #76D7C4;
+    height: 80px;
+    text-align: center;
+    padding-top: 5%;
+
+}
+.Happy a{
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    color:white;
+    font-size: medium;
+    font-size: 20px;
+}
+.Happy hr {
+    width: 30%; /* Set the width of the horizontal line */
+    border: white;/* Set the color of the horizontal line */
+    margin: 20px auto; /* Center the horizontal line */
+}
+
+.Happy a:hover{color:  rgb(108, 43, 108);}
+
+.pic {
+    display: flex;
+    height: 5%;
+    
+  
+
+}
+
+.pic img {
+    max-width: 20%; /* Ensure the image doesn't exceed its container */
+    display: inline;
+   
+    
+
+}
+
+
+ 
+.contact p , p1 {
         
-      
+    margin: auto;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(108, 43, 108);
+    font-size: medium;
+    font-weight: bold;
+    font-size: 20px;
+
+    padding-top: 6%;
+    
+
+}
+
+.contact hr {
+    width: 50%; /* Set the width of the horizontal line */
+    border: 1px solid  rgb(108, 43, 108); /* Set the color of the horizontal line */
+    margin: 20px auto; /* Center the horizontal line */
+}
+
+
+.contact {
+    text-decoration: none;
+    font-size: x-large;
+    padding-right: 3%;
+    text-align: center;
+    align-items: center;
+    height: 90vh;
+}
+.contact a {
+    color:rgb(108, 43, 108) ;
+}
+
+.contact a:hover {
+    color: rgb(56, 28, 56);
+}
+
+
+
+.form-group {
+    margin-bottom: 20px;
+    color:rgb(108, 43, 108) ;
+    font-size:20px;
+    font-weight: bold;
+}
+
+.form-group input {
+    border: none;
+    border-bottom: 1px solid black;
+    font-size: 18px;
+    padding: 5px;
+    width: 50%;
+}
+
+.form-container {
+    text-align: center;
+}
+
+textarea {
+    background-color: white;
+    width: 50%;
+    margin-bottom: 20px;
+    padding: 10px;
+    font-size: 16px;
+}
+
+button {
+    font-family: 'Times New Roman', Times, serif;
+    width: 40%;
+    background-color:  #76D7C4;
+    color: white;
+    padding: 5px 20px;
+    border: none;
+        cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+footer {
+   width: 100%;
+   height: 60px;
+   background-color:  #76D7C4;
+   
+}
+
+footer p {
+    font-family: 'Times New Roman', Times, serif;
+    width: 40%;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    position: absolute;
+    padding-left: 30%;    
+}
+
+
+
+
+
+
+
+ .sign-in  {
+    background-image: url('images/pexels-anna-shvets-4587993.jpg');
+    background-size: cover; 
+    background-repeat: no-repeat; 
+   
+ }
+
 
 .signin-container {
     max-width: 400px;
@@ -100,4 +411,65 @@ body {
     text-decoration: underline;
 }
 
-        
+
+
+.signup-container {
+    display: flex;
+}
+
+.signup-left {
+    width: 30%;
+    background-color: #76D7C4;
+    text-align: center;
+    padding: 50px;
+    transform: skewX(-13deg);
+    
+}
+
+.signup-left img {
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+    transform: skewX(-2deg);
+}
+
+.signup-right {
+    width: 50%;
+    padding: 50px;
+}
+
+.signup-right h2 {
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    font-size: medium;
+    color: black;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
