--- a/public/ManageClient.css
+++ b/public/ManageClient.css
@@ -63,6 +63,7 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .editClient {
@@ -74,6 +75,7 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .removeClient {
@@ -85,6 +87,7 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .boxContainer :hover {
