--- a/public/addAnimal.css
+++ b/public/addAnimal.css
@@ -77,7 +77,7 @@ body {
     right: -75px;
 }
 
-.lastNam {
+.animalID {
     height: 10%;
     size: 50;
     padding: 5px;
@@ -85,7 +85,7 @@ body {
     right: -75px;
 }
 
-.email {
+.ownerr {
     height: 10%;
     size: 50;
     padding: 5px;
@@ -93,58 +93,10 @@ body {
     right: -145px;
 }
 
-.phoneNumber {
+.breed {
     height: 10%;
     size: 50;
     padding: 5px;
     position: relative;
     right: -20px;
-}
-
-.streetName {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -55px;
-}
-
-.houseNumber {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -112px;
-}
-
-.city {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -173px;
-}
-
-.postalCode {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -60px;
-}
-
-.username {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -85px;
-}
-
-.password {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -93px;
 }
