--- a/public/addClient.css
+++ b/public/addClient.css
@@ -69,7 +69,7 @@ body {
     right: -160px;
 }
 
-.animalName {
+.firstName {
     height: 10%;
     size: 50;
     padding: 5px;
@@ -77,7 +77,7 @@ body {
     right: -75px;
 }
 
-.lastNam {
+.lastName {
     height: 10%;
     size: 50;
     padding: 5px;
