--- a/public/removeClient.css
+++ b/public/removeClient.css
@@ -39,12 +39,14 @@ body {
     color: #ff9900;
 }
 
-.clientContainer {
+.clientLookUp {
     text-align: center;
     margin-bottom: 20px;
+    position: relative;
+    left: -500px;
 }
 
-.clientInfoBox {
+.clientInfo {
     width: 100%;
     border: 1px solid #ccc;
     padding: 40px;
@@ -55,7 +57,41 @@ body {
     font-size: 30px;
 }
 
-.saveInfo {
+.clientResultShow {
+    text-align: center;
+    margin-bottom: 20px;
+    position: relative;
+    top: -352px;
+}
+
+.clientInfo1 {
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 40px;
+    align-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 30px;
+}
+
+.firstName1 {
+    height: 10%;
+    size: 50;
+    padding: 5px;
+    position: relative;
+    right: -35px;
+}
+
+.lastName1 {
+    height: 10%;
+    size: 50;
+    padding: 5px;
+    position: relative;
+    right: -35px;
+}
+
+.searchInfo {
     background-color: #333;
     border: none;
     color: white;
@@ -65,54 +101,16 @@ body {
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
-    position: relative;
-    right: -160px;
 }
 
-.firstName {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -75px;
-}
-
-.lastName {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -75px;
-}
-
-.email {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -145px;
-}
-
-.phoneNumber {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -20px;
-}
-
-.username {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -85px;
-}
-
-.password {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -93px;
+.editInfo {
+    background-color: #333;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
 }
