--- a/public/editClient.css
+++ b/public/editClient.css
@@ -43,7 +43,8 @@ body {
     text-align: center;
     margin-bottom: 20px;
     position: relative;
-    left: -500px;
+    left: -620px;
+    top: 100px;
 }
 
 .clientInfo {
@@ -72,11 +73,11 @@ body {
     align-items: center;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .firstName1 {
-    height: 10%;
+    height: 20%;
     size: 50;
     padding: 5px;
     position: relative;
@@ -84,7 +85,7 @@ body {
 }
 
 .lastName1 {
-    height: 10%;
+    height: 20%;
     size: 50;
     padding: 5px;
     position: relative;
