--- a/public/removeClient.css
+++ b/public/removeClient.css
@@ -43,7 +43,8 @@ body {
     text-align: center;
     margin-bottom: 20px;
     position: relative;
-    left: -500px;
+    left: -620px;
+    top: 100px;
 }
 
 .clientInfo {
@@ -72,7 +73,7 @@ body {
     align-items: center;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .firstName1 {
