--- a/public/listClients.css
+++ b/public/listClients.css
@@ -39,79 +39,42 @@ body {
     color: #ff9900;
 }
 
-.clientLookUp {
-    text-align: center;
-    margin-bottom: 20px;
-    position: relative;
-    left: -620px;
-    top: 100px;
-}
-
-.clientInfo {
-    width: 100%;
+.buttonClickBox {
+    width: 20%;
     border: 1px solid #ccc;
-    padding: 40px;
+    padding: 20px;
+    text-align: center;
     align-content: center;
     align-items: center;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-size: 30px;
-}
-
-.clientResultShow {
-    text-align: center;
     margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
-    top: -352px;
+    left: -600px;
 }
 
-.clientInfo1 {
-    width: 100%;
+.showClients {
+    background-color: #333;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.clientLists {
+    width: 30%;
     border: 1px solid #ccc;
-    padding: 100px;
-    align-content: center;
-    align-items: center;
+    text-align: center;
+    position: absolute;
+    margin-top: 5%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.results {
     font-size: 20px;
-}
-
-.firstName1 {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -35px;
-}
-
-.lastName1 {
-    height: 10%;
-    size: 50;
-    padding: 5px;
-    position: relative;
-    right: -35px;
-}
-
-.searchInfo {
-    background-color: #333;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.editInfo {
-    background-color: #333;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
 }
