--- a/public/manageClients.css
+++ b/public/manageClients.css
@@ -90,6 +90,18 @@ body {
     cursor: pointer;
 }
 
+.listClients {
+    background-color: #333;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 .boxContainer :hover {
     color: #ff9900;
 }
