--- a/public/listClients.css
+++ b/public/listClients.css
@@ -55,6 +55,33 @@ body {
 
 .showClients {
     background-color: #333;
+    width: 70%;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.addClient {
+    background-color: #333;
+    width: 70%;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.editRemoveClient {
+    background-color: #333;
+    width: 70%;
     border: none;
     color: white;
     padding: 15px 32px;
