--- a/public/manageAnimals.css
+++ b/public/manageAnimals.css
@@ -56,6 +56,7 @@ body {
 
 .addClient {
     background-color: #333;
+    width: 68%;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -66,8 +67,9 @@ body {
     cursor: pointer;
 }
 
-.editClient {
+.editRemoveClient {
     background-color: #333;
+    width: 68%;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -80,6 +82,7 @@ body {
 
 .listAnimals {
     background-color: #333;
+    width: 68%;
     border: none;
     color: white;
     padding: 15px 32px;
