--- a/public/editRemoveAnimal.css
+++ b/public/editRemoveAnimal.css
@@ -44,7 +44,7 @@ body {
   margin-bottom: 20px;
   position: relative;
   left: -620px;
-  top: 100px;
+  top: 150px;
 }
 
 .animalInfo {
@@ -62,7 +62,7 @@ body {
   text-align: center;
   margin-bottom: 20px;
   position: relative;
-  top: -352px;
+  top: -100px;
 }
 
 .animalInfo1 {
@@ -117,6 +117,34 @@ body {
 }
 
 .removeInfo {
+  background-color: #333;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.editAnimalInfo {
+  width: 20%;
+  border: 1px solid #ccc;
+  padding: 30px;
+  align-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  top: -600px;
+  right: -650px;
+}
+
+.saveInfo {
   background-color: #333;
   border: none;
   color: white;
