--- a/public/listAnimal.css
+++ b/public/listAnimal.css
@@ -49,8 +49,9 @@ body {
   border-radius: 10px;
   margin-bottom: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  position: relative;
-  left: -600px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
 }
 
 .showAnimals {
@@ -96,12 +97,13 @@ body {
   width: 30%;
   border: 1px solid #ccc;
   text-align: center;
-  position: absolute;
-  margin-top: 5%;
+  position: relative;
+  margin: 0 auto;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  height: 400px; /* Set an appropriate height */
-  overflow-y: auto; /* Enable vertical scrolling if content exceeds the container height */
+  height: 100vh;
+  overflow: auto;
+  margin-right: 700px;
 }
 
 .results {
