--- a/public/Index.css
+++ b/public/Index.css
@@ -915,11 +915,11 @@ button:hover {
 
 .Fcontainer {
     background-color: white;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+   
+   
     text-align: center;
-    max-width: 600px;
+   
     width: 100%;
     margin: 0 auto;
 }
@@ -964,4 +964,8 @@ h1 {
 .feedback-list .feedback-item video {
     width: 100%;
     margin-top: 10px;
+}
+.feedback-form {
+    margin-bottom: 50px; /* Adjust the value as needed */
+    
 }
