--- a/public/Index.css
+++ b/public/Index.css
@@ -939,7 +939,7 @@ h1 {
 }
 
 .feedback-form button {
-    background-color: #4CAF50;
+    background-color: #76D7C4;
     color: white;
     border: none;
     padding: 12px 24px;
@@ -950,22 +950,43 @@ h1 {
 }
 
 .feedback-form button:hover {
-    background-color: #45a049;
+    background-color: #65AF9D;
 }
 
-.feedback-list .feedback-item {
-    border: 1px solid #ccc;
+.feedback-item {
+    background-color: #a9d1c9;
+    padding: 10px;
+    margin-bottom: 10px; /* Adjust the margin as needed */
     border-radius: 5px;
-    padding: 20px;
-    margin-bottom: 20px;
-    text-align: left;
+    display: flex;
+}
+
+.feedback-content {
+    margin-top: 10px; /* Add margin between username and feedback content */
 }
 
 .feedback-list .feedback-item video {
     width: 100%;
     margin-top: 10px;
 }
+
 .feedback-form {
     margin-bottom: 50px; /* Adjust the value as needed */
-    
+
+}
+.username-container {
+    background-color: #78b0a2;
+    padding: 5px;
+    border-radius: 5px;
+    width: 100px; /* Set a fixed width for the username box */
+    text-align: center; /* Center the text within the box */
+}
+
+.feedback-container {
+    margin-left: 10px; /* Adjust the margin as needed */
+    background-color: #78b0a2; /* Adjust the background color as needed */
+    padding: 5px;
+    border-radius: 5px;
+    text-align: left; /* Set the text alignment to left */
+    width: 1500px;
 }
