--- a/public/viewCanineForm.css
+++ b/public/viewCanineForm.css
@@ -39,16 +39,6 @@ body {
     color: #ff9900;
 }
 
-.formLookUp {
-    width: 30%;
-    border: 1px solid #ccc;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: auto; /* Center the container horizontally */
-    text-align: center; /* Center the content within the container */
-}
-
 .searchForms {
     background-color: #333;
     border: none;
@@ -65,4 +55,11 @@ body {
 
 .searchForms :hover {
     color: #ff9900;
+}
+
+.formInfo,
+.formInfo1 {
+    width: 100%;
+    margin: 10px 0;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
