--- a/public/viewEquineForm.css
+++ b/public/viewEquineForm.css
@@ -41,12 +41,29 @@ body {
 
 .formLookUp {
     width: 30%;
+    position: fixed;
+    top: 5%;
     border: 1px solid #ccc;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: auto; /* Center the container horizontally */
+    margin: 50px auto;
     text-align: center; /* Center the content within the container */
+    
+}
+
+.formResultShow {
+    width: 30%;
+    position: fixed;
+    top: 41%;
+    border: 1px solid #ccc;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+    text-align: center; /* Center the content within the container */
+    overflow-y: auto;
+    max-height: 50vh;
 }
 
 .searchForms {
