--- a/public/editRemoveCanineForm.css
+++ b/public/editRemoveCanineForm.css
@@ -43,6 +43,7 @@ body {
     width: 20%;
     position: fixed;
     top: 5%;
+    right: 73%;
     border: 1px solid #ccc;
     padding: 40px;
     border-radius: 10px;
@@ -55,7 +56,8 @@ body {
 .formResultShow {
     width: 30%;
     position: fixed;
-    top: 48%;
+    top: 9%;
+    right: 37%;
     border: 1px solid #ccc;
     padding: 40px;
     border-radius: 10px;
@@ -63,5 +65,20 @@ body {
     margin: 20px auto;
     text-align: center; /* Center the content within the container */
     overflow-y: auto;
-    max-height: 40vh;
+    max-height: 70vh;
+}
+
+.editFormInfo {
+    width: 30%;
+    position: fixed;
+    top: 9%;
+    left: 64%;
+    border: 1px solid #ccc;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+    text-align: center; /* Center the content within the container */
+    overflow-y: auto;
+    max-height: 70vh;
 }
